# templates.django

./: docker-compose.yml  manage.py  pyproject.toml
.docker/: Dockerfile
template_django/: urls.py
template_django/settings/: base.py  production.py
